[package]
name = "blfilter"
version = "0.2.0"
resolver = "2"
edition = "2021"
authors = ["Jiancong Zhu <chasing1020@gmail.com>"]
description = "Bloom filter implementation using farmhash."
license = "Apache-2.0"
repository = "https://github.com/Chasing1020/blfilter"
keywords = ["bloom", "filter"]
readme = "README.md"


[dependencies]
serde = { version = "1.0.197", default-features = false, optional = true }
farmhash = "1.1.5"
bytes = "1.0.1"

[features]
default = ["std"]
std = ["serde/std", "serde/derive"]
